<resources>
    <string name="app_name">MonopolyDeal</string>
    <string name="draw_card">Draw Card</string>
    <string name="play_card">Play Card</string>
    <string name="start_game">Start Game</string>
    <string name="exit">Exit</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="google_web_client_id">542262076160-r0b48nobd5uad323lq7vvjkop34cso4s.apps.googleusercontent.com</string>
    <string name="default_username">Guest</string>
    <string name="button">Button</string>
    <string name="add_friend">Add Friend</string>
    <string name="google_sign_in_description">Google Sign-In Button</string>
    <string name="logout">Logout</string>
    <string name="checking_for_updates">Checking for updates…</string>
    <string name="checking_user_status">Checking user status…</string>
    <string name="update_check_complete">Update check complete</string>
    <string name="checking_for_updates_progress">Checking for updates: %1$d%%</string>
    <string name="new_version_available">A new version of the app is available. Do you want to download it?</string>
    <string name="app_up_to_date">App is up to date</string>
    <string name="loading">Loading…</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="new_version_available_title">New Version Available</string>
    <string name="new_version_available_message">A new version of the app is available. Do you want to download it?</string>
    <string name="app_updating">Updating…</string>
    <string name="checking_for_updates_error">Error checking for updates</string>
    <string name="play">Play</string>
    <string name="friends_list">Friend List</string>
    <string name="friends">Friends List</string>
    <string name="card_format">%s - %d</string>
</resources>