<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <!-- ... (other layout elements) ... -->

    <!-- Action Buttons -->
    <LinearLayout
        android:id="@+id/actionButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/addFriendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/add_friend"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/drawCardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw_card"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/playCardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_card"
            style="?android:attr/buttonBarButtonStyle"/>

        <!-- Add more buttons for other actions as needed -->

    </LinearLayout>

    <Button
        android:id="@+id/usernameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:text="@string/button" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="209dp"
        android:text="@string/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playButton" />


</RelativeLayout>
